--- a/src/main/resources/strings.properties
+++ b/src/main/resources/strings.properties
@@ -2,3 +2,5 @@ prefix=&8&l<&3&lSSunde-SG&8&l> &r
 connecting=&3Connecting you to &c&l<server>&3.
 server-not-online=&3This server is currently offline.
 already-connected=&3You are already connected to this server.
+updating-routing=&cThis server is currently updating it's routing, please reconnect.
+default-motd=&8This server does not have an assigned MOTD.
