--- a/src/main/resources/strings.properties
+++ b/src/main/resources/strings.properties
@@ -4,3 +4,4 @@ server-not-online=&3This server is currently offline.
 already-connected=&3You are already connected to this server.
 updating-routing=&cThis server is currently updating it's routing, please reconnect.
 default-motd=&8This server does not have an assigned MOTD.
+alert=&b<alert>
