Yey no more compiler errors. :D

--- a/src/main/resources/strings.properties
+++ b/src/main/resources/strings.properties
@@ -1,7 +1,7 @@
-prefix=&8&l<&3&lSSunde-SG&8&l> &r
+prefix=&8<&3Ssundee&8>
 connecting=&3Connecting you to &c&l<server>&3.
 server-not-online=&3This server is currently offline.
 already-connected=&3You are already connected to this server.
 updating-routing=&cThis server is currently updating it's routing, please reconnect.
 default-motd=&8This server does not have an assigned MOTD.
-alert=&b<alert>
+alert=&7[&4Alert&7] &b<alert>
