--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,7 @@
                                 <includes>
                                     <include>redis.clients:jedis</include>
                                     <include>org.json:json</include>
+                                    <include>commons-pool:commons-pool</include>
                                 </includes>
                             </artifactSet>
                         </configuration>
